--- a/app/app.css
+++ b/app/app.css
@@ -1,57 +1,83 @@
-body {
-    margin: 0;
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    height: 100vh;
-    width: 100vw;
-    justify-content: center;
-    align-items: center;
-  }
-  main {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-  }
-  button {
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 0.6em 1.2em;
-    font-size: 1em;
-    font-weight: 500;
-    font-family: inherit;
-    background-color: #1a1a1a;
-    cursor: pointer;
-    transition: border-color 0.25s;
-    color: white;
-  }
-  button:hover {
-    border-color: #646cff;
-  }
-  button:focus,
-  button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
-  }
-  ul {
-    padding-inline-start: 0;
-    margin-block-start: 0;
-    margin-block-end: 0;
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    margin: 8px 0;
-    border: 1px solid black;
-    gap: 1px;
-    background-color: black;
-    border-radius: 8px;
-    overflow: auto;
-  }
-  li {
-    background-color: white;
-    padding: 8px;
-  }
-  li:hover {
-    background: #dadbf9;
-  }
-  a {
-    font-weight: 800;
-    text-decoration: none;
-  }
+/*************************
+    ACCESSIBILITY
+*************************/
+.sr-only {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+/*************************
+    CONTAINERS
+*************************/
+.BTCContainer {
+  max-width: var(--width-max);
+  width: var(--width-default);
+  margin: 0 auto;
+}
+.CalcContainer {
+  display: flex;
+  margin-bottom: 2rem;
+  align-content: stretch;
+}
+/*************************
+  TEXT
+*************************/
+p {
+    margin: 0 0 1rem 0;
+}
+h2, h3, h4, h5, h6 {
+	margin: 1em 0 .5em 0;
+}
+h1, h2, h3, h4, h5, h6 {
+	line-height: 1.2;
+}
+h1 {
+  font-size: 3.5rem;
+}
+p:last-child, ol:last-child, ul:last-child {
+	margin-bottom: 0;
+}
+h2:first-child, h3:first-child, h4:first-child, h5:first-child, h6:first-child {
+	margin-top: 0;
+}
+/* TABLE */
+table {
+  border-collapse: collapse;
+}
+caption {
+  text-align: left;
+  font-size: 1.5rem;
+}
+th, td{
+  border-bottom: 1px solid #ddd;;
+  padding: 1px;
+  width: 100px;
+  overflow: auto;
+}
+th {
+    background-color: #555555;
+  color: #fff;
+}
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+/*************************
+  LINKS
+*************************/
+a {
+	color: var(--link-color);
+	text-decoration: underline;
+	transition: all .3s;
+}
+a:hover, a:focus {
+	color: var(--link-color-hover);
+}
+/*************************
+  FORMS ELEMENTS
+*************************/
+button, input, textarea, select {
+	font-family: inherit;
+}
