--- a/app/globals.css
+++ b/app/globals.css
@@ -1,62 +1,83 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: #CBBEFF;
-  --background-end-rgb: 255, 255, 255;
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: #6649AE;
-  --card-border-rgb: 131, 134, 135;
+/*************************
+    ACCESSIBILITY
+*************************/
+.sr-only {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+/*************************
+    CONTAINERS
+*************************/
+.BTCContainer {
+  max-width: var(--width-max);
+  width: var(--width-default);
+  margin: 0 auto;
 }
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.CalcContainer {
+  display: flex;
+  margin-bottom: 2rem;
+  align-content: stretch;
 }
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+/*************************
+  TEXT
+*************************/
+p {
+    margin: 0 0 1rem 0;
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+h2, h3, h4, h5, h6 {
+	margin: 1em 0 .5em 0;
 }
-
+h1, h2, h3, h4, h5, h6 {
+	line-height: 1.2;
+}
+h1 {
+  font-size: 3.5rem;
+}
+p:last-child, ol:last-child, ul:last-child {
+	margin-bottom: 0;
+}
+h2:first-child, h3:first-child, h4:first-child, h5:first-child, h6:first-child {
+	margin-top: 0;
+}
+/* TABLE */
+table {
+  border-collapse: collapse;
+}
+caption {
+  text-align: left;
+  font-size: 1.5rem;
+}
+th, td{
+  border-bottom: 1px solid #ddd;;
+  padding: 1px;
+  width: 100px;
+  overflow: auto;
+}
+th {
+    background-color: #555555;
+  color: #fff;
+}
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+/*************************
+  LINKS
+*************************/
 a {
-  color: inherit;
-  text-decoration: none;
+	color: var(--link-color);
+	text-decoration: underline;
+	transition: all .3s;
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+a:hover, a:focus {
+	color: var(--link-color-hover);
+}
+/*************************
+  FORMS ELEMENTS
+*************************/
+button, input, textarea, select {
+	font-family: inherit;
 }
